----------------------------------------------------------------------

        
CRM 5.1

Date: June/2018

- Fixed buttons on review request page, were right aligning instead of bottom.
- Updated version.php issue.
- Updated DB schema issue for new moodle.   

- Origin issue corrected during request process
- cmanager home select all option cross browser issue fixed during bulk request actions  
   
        
----------------------------------------------------------------------


CRM 4.3
Date: 25/May/2015
- Fixed permissions in access.php.
- Updated readme.txt with quick guide on permissions
- Changed block_cmanager to work on permissions rather than admin privs
- Deleted duplicate cmanager folder
- Updated icon set
- Display database record ID for each request rather than counter
- Course Creator and Manager roles (system) can now manage approval process
- Fix for course categories not displaying for users on page 1 of form
- Minor fixes and improvements
- Tested with 2.8 & 2.9

See Github for full log!

----------------------------------------------------------------------

CRM 4.2
Date: 5/Aug/2014
- Question marks not accepted during request process. Question marks
are now allowed.
- Editing issue during course request resolved.
- Bulk approve updated

See Github for full log!

----------------------------------------------------------------------
CRM 4.1
Date: 11/April/2014
- Enrollment keys are optional
- Safari form1.php saving issue solved.
- Various small bug fixes
----------------------------------------------------------------------

CRM Version 4.0
Date: 1/April/2014

- Updated license information
- Checked on Moodle 2.6
- Default form blank value error resolved.


----------------------------------------------------------------------

CRM Version 3.9
Date: 25/Nov/2013

- New Layout for requests
- Issue with escaping characters resolved
- New German Language pack added (Thanks to Alexander Kiy )
- New layout for comment system